--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Coronavirus tracker</title>
-  <base href="newvishal.gitjub.io">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
@@ -12,5 +12,5 @@
 <link rel="stylesheet" href="styles.aa4be49081de55cc009e.css"></head>
 <body>
   <app-root></app-root> 
-<script src="runtime-es2015.114ad76186d4935f92f6.js" type="module"></script><script src="runtime-es5.114ad76186d4935f92f6.js" nomodule defer></script><script src="polyfills-es5.7d7d156430c9cd92193e.js" nomodule defer></script><script src="polyfills-es2015.79b5019f4dff069483c4.js" type="module"></script><script src="main-es2015.335c92d8dfee349c30d8.js" type="module"></script><script src="main-es5.335c92d8dfee349c30d8.js" nomodule defer></script></body>
+<script src="runtime-es2015.988866f62959abf0f741.js" type="module"></script><script src="runtime-es5.988866f62959abf0f741.js" nomodule defer></script><script src="polyfills-es5.7d7d156430c9cd92193e.js" nomodule defer></script><script src="polyfills-es2015.79b5019f4dff069483c4.js" type="module"></script><script src="main-es2015.335c92d8dfee349c30d8.js" type="module"></script><script src="main-es5.335c92d8dfee349c30d8.js" nomodule defer></script></body>
 </html>
